# nmpde-project-wave-equation

./: .gitignore  CMakeLists.txt  README.md  run_convergence_study.sh  run_dispersion_study.sh  run_energy_study.sh
results/convergence/: convergence_spatial_omega4.44288.csv  convergence_spatial_omega6.28319.csv  convergence_temporal_omega4.44288.csv  convergence_temporal_omega6.28319.csv  plot_convergence.py
results/dispersion/: dispersion_cancellation_axis.csv  dispersion_cancellation_diagonal.csv  dispersion_spatial_axis.csv  dispersion_spatial_diagonal.csv  dispersion_temporal.csv
results/energy/: energy_homogeneous.csv  energy_theta0_dt005.csv  energy_theta0_dt05.csv  energy_theta1.csv  plot_energy.py  plot_energy_theta0_instability.py
scripts/: plot_convergence.py  plot_dispersion.py  plot_energy.py  plot_energy_theta0_instability.py
src/: WaveEquation.cpp  WaveEquation.hpp  convergence-wave.cpp  dispersion-wave.cpp  energy-wave.cpp  exercise-wave.cpp
